--- a/angular.json
+++ b/angular.json
@@ -21,10 +21,8 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
+              "src/assets",
+              "src/assets/images/"
             ],
             "styles": [
               "src/styles.css"
@@ -42,7 +40,7 @@
                 {
                   "type": "anyComponentStyle",
                   "maximumWarning": "2kB",
-                  "maximumError": "4kB"
+                  "maximumError": "20kB"
                 }
               ],
               "outputHashing": "all"
